--- a/_coverage/lcov-report/src/hoc/index.html
+++ b/_coverage/lcov-report/src/hoc/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Code coverage report for src/ErrorHandling</title>
+    <title>Code coverage report for src/hoc</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../prettify.css" />
     <link rel="stylesheet" href="../../base.css" />
@@ -16,32 +16,32 @@
 <div class='wrapper'>
   <div class='pad1'>
     <h1>
-      <a href="../../index.html">All files</a> src/ErrorHandling
+      <a href="../../index.html">All files</a> src/hoc
     </h1>
     <div class='clearfix'>
       <div class='fl pad1y space-right2'>
-        <span class="strong">50% </span>
+        <span class="strong">4.88% </span>
         <span class="quiet">Statements</span>
-        <span class='fraction'>2/4</span>
+        <span class='fraction'>2/41</span>
       </div>
       <div class='fl pad1y space-right2'>
         <span class="strong">0% </span>
         <span class="quiet">Branches</span>
-        <span class='fraction'>0/2</span>
+        <span class='fraction'>0/14</span>
       </div>
       <div class='fl pad1y space-right2'>
         <span class="strong">0% </span>
         <span class="quiet">Functions</span>
-        <span class='fraction'>0/1</span>
+        <span class='fraction'>0/13</span>
       </div>
       <div class='fl pad1y space-right2'>
-        <span class="strong">50% </span>
+        <span class="strong">5.71% </span>
         <span class="quiet">Lines</span>
-        <span class='fraction'>2/4</span>
+        <span class='fraction'>2/35</span>
       </div>
     </div>
   </div>
-  <div class='status-line medium'></div>
+  <div class='status-line low'></div>
 <div class="pad1">
 <table class="coverage-summary">
 <thead>
@@ -59,29 +59,16 @@
 </tr>
 </thead>
 <tbody><tr>
-	<td class="file high" data-value="errorMessages.js"><a href="errorMessages.js.html">errorMessages.js</a></td>
-	<td data-value="100" class="pic high"><div class="chart"><div class="cover-fill cover-full" style="width: 100%;"></div><div class="cover-empty" style="width:0%;"></div></div></td>
-	<td data-value="100" class="pct high">100%</td>
-	<td data-value="1" class="abs high">1/1</td>
-	<td data-value="100" class="pct high">100%</td>
-	<td data-value="0" class="abs high">0/0</td>
-	<td data-value="100" class="pct high">100%</td>
-	<td data-value="0" class="abs high">0/0</td>
-	<td data-value="100" class="pct high">100%</td>
-	<td data-value="1" class="abs high">1/1</td>
-	</tr>
-
-<tr>
-	<td class="file low" data-value="errors.js"><a href="errors.js.html">errors.js</a></td>
-	<td data-value="33.33" class="pic low"><div class="chart"><div class="cover-fill" style="width: 33%;"></div><div class="cover-empty" style="width:67%;"></div></div></td>
-	<td data-value="33.33" class="pct low">33.33%</td>
-	<td data-value="3" class="abs low">1/3</td>
+	<td class="file low" data-value="DraggableWrapper.js"><a href="DraggableWrapper.js.html">DraggableWrapper.js</a></td>
+	<td data-value="4.88" class="pic low"><div class="chart"><div class="cover-fill" style="width: 4%;"></div><div class="cover-empty" style="width:96%;"></div></div></td>
+	<td data-value="4.88" class="pct low">4.88%</td>
+	<td data-value="41" class="abs low">2/41</td>
 	<td data-value="0" class="pct low">0%</td>
-	<td data-value="2" class="abs low">0/2</td>
+	<td data-value="14" class="abs low">0/14</td>
 	<td data-value="0" class="pct low">0%</td>
-	<td data-value="1" class="abs low">0/1</td>
-	<td data-value="33.33" class="pct low">33.33%</td>
-	<td data-value="3" class="abs low">1/3</td>
+	<td data-value="13" class="abs low">0/13</td>
+	<td data-value="5.71" class="pct low">5.71%</td>
+	<td data-value="35" class="abs low">2/35</td>
 	</tr>
 
 </tbody>
